// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c20 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 {
  padding: 0.5rem 1.6rem;
}

.c21 {
  background: #000000;
  color: #FFFFFF;
  border: none;
  padding: 1.6rem 3.2rem;
  cursor: pointer;
}

.c21:disabled {
  background: #AAAAAA;
}

.c6 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c18 .c5 {
  margin: 1.6rem 0;
}

.c18 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c18:hover a {
  color: #dc143c;
}

.c18:hover img {
  opacity: 0.8;
}

.c19 {
  max-width: 100%;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
}

.c16 {
  width: 100%;
}

.c17 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c23 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c23 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c24 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c24 p {
  margin: 2.4rem 0;
}

.c24 a,
.c24 a:visited,
.c24 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c24 a:hover,
.c24 a:visited:hover,
.c24 a:link:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c24 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background-color: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c24 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  font-size: 1.6rem;
  width: 100%;
  overflow-x: auto;
}

.c24 pre code {
  background: inherit;
  color: inherit;
}

.c24 img {
  max-width: 100%;
}

.c24 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c24 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c24 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c24 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c24 ul,
.c24 ol {
  margin: 2.4rem 4.0rem;
}

.c24 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c24 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem;
}

.c24 table td,
.c24 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c24 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c25 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
}

.c10 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c8 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c8:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c2 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  border: 0.3rem solid #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c9 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c13 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c22 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c17 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c24 {
    font-size: 2rem;
  }

  .c24 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:360px) {
  .c10 {
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c10 > .c5 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c11 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: 1rem;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="MorriceDev"
                src="/assets/images/teste.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c8"
          href="#"
          target="_self"
        >
          Teste
        </a>
        <a
          class="c8"
          href="#teste2"
          target="_self"
        >
          Teste2
        </a>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="MorriceDev - Blog"
              src="/assets/images/teste.jpg"
            />
          </a>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            MorriceDev
          </h2>
          <p>
            alguma coisa
          </p>
        </div>
      </header>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <form
          action="/search"
          method="GET"
        >
          <input
            class="c15"
            name="q"
            placeholder="Encontre posts"
            type="search"
            value=""
          />
        </form>
      </div>
      <div
        class="c16"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
          >
            <a
              href="/post/como-utilizar-um-estado-dentro-do-use-effect"
            >
              <img
                alt=""
                class="c19"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/como-utilizar-um-estado-dentro-do-use-effect"
              >
                Como utilizar um estado dentro do useEffect
              </a>
            </h2>
            <p
              class=""
            >
              Aprenda a melhor maneira de utilizar um estado dentro do useEffect sem criar loops ou afetar o desempenho da aplicação.
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/como-utilizar-hooks-do-react"
            >
              <img
                alt=""
                class="c19"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/como-utilizar-hooks-do-react"
              >
                Como utilizar hooks do React
              </a>
            </h2>
            <p
              class=""
            >
              Aprenda de forma descomplicada a utilizar os React Hooks!
            </p>
          </div>
          <div
            class="c18"
          >
            <a
              href="/post/como-utilizar-hooks-do-react2"
            >
              <img
                alt=""
                class="c19"
                src="https://res.cloudinary.com/dlizakp2a/image/upload/v1614698965/Ubuntu_gel_by_Midge_Mantissa_Sinnaeve_7caea7ddb4.jpg"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/como-utilizar-hooks-do-react2"
              >
                Como utilizar hooks do React2
              </a>
            </h2>
            <p
              class=""
            >
              Aprenda de forma descomplicada a utilizar os React Hooks2!
            </p>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c21"
        >
           Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c22"
    >
      <footer
        class="c23"
      >
        <div
          class="c24"
        >
          <p>
            Um footer qualquer aqui
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c25"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c19 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 {
  padding: 0.5rem 1.6rem;
}

.c6 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c12 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c16 {
  width: 100%;
}

.c17 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c18 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c21 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c21 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c22 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c22 p {
  margin: 2.4rem 0;
}

.c22 a,
.c22 a:visited,
.c22 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c22 a:hover,
.c22 a:visited:hover,
.c22 a:link:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c22 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background-color: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c22 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  font-size: 1.6rem;
  width: 100%;
  overflow-x: auto;
}

.c22 pre code {
  background: inherit;
  color: inherit;
}

.c22 img {
  max-width: 100%;
}

.c22 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c22 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c22 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c22 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c22 ul,
.c22 ol {
  margin: 2.4rem 4.0rem;
}

.c22 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c22 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem;
}

.c22 table td,
.c22 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c22 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c23 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 auto;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
}

.c10 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c8 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c8:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c2 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow-y: auto;
  left: -30rem;
  overflow-y: hidden;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 .c5 img {
  border: 0.3rem solid #dc143c;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c9 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c13 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c20 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c18 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c22 {
    font-size: 2rem;
  }

  .c22 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:360px) {
  .c10 {
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c10 > .c5 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c11 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c2 {
    left: -32rem;
  }
}

@media (max-width:768px) {
  .c0 {
    left: 1rem;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or close menu"
      class="c0"
      href="#"
      title="Open or close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="MorriceDev"
                src="/assets/images/teste.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c8"
          href="#"
          target="_self"
        >
          Teste
        </a>
        <a
          class="c8"
          href="#teste2"
          target="_self"
        >
          Teste2
        </a>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="MorriceDev - Blog"
              src="/assets/images/teste.jpg"
            />
          </a>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            MorriceDev
          </h2>
          <p>
            alguma coisa
          </p>
        </div>
      </header>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <form
          action="/search"
          method="GET"
        >
          <input
            class="c15"
            name="q"
            placeholder="Encontre posts"
            type="search"
            value=""
          />
        </form>
      </div>
      <div
        class="c16"
      >
        <p
          class="c17"
        >
          Nenhum post encontrado.
        </p>
        <div
          class="c18"
        />
      </div>
      <div
        class="c19"
      />
    </div>
    <div
      class="c20"
    >
      <footer
        class="c21"
      >
        <div
          class="c22"
        >
          <p>
            Um footer qualquer aqui
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c23"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
